src/grammar.txt
arguments => expression ( "," expression )*
parameters => IDENTIFIER ( "," IDENTIFIER )*
function => IDENTIFIER "(" parameters? ")" stmt


program => decl* EOF

decl => classDecl | funcDecl | varDecl | stmt

classDecl => "class" IDENTIFIER "{" function* "}"
funcDecl => "function" function
varDecl => ( "var" | "final" ) IDENTIFIER ( "=" expression )? ";"

stmt => exprStmt | ifStmt | whileStmt | doWhileStmt | forStmt | exitStmt | retStmt | block

exprStmt => expression ";"
ifStmt => "if" "(" expression ")" stmt ( "else" stmt )?
whileStmt => "while" "(" expression ")" stmt
doWhileStmt => "do" stmt "while" "(" expression ")" ";"
forStmt => "for" "(" ( varDecl | exprStmt | ";" ) expression? expression? ")" stmt
exitStmt => "exit" expression? ";"
retStmt => "ret" expression? ";"
block => "{" decl* "}"

expression => lambda
lambda => ( "lamda" ( "(" parameters ")" )? ":" expression ) | ternary
ternary => assignment ( "?" expression ":" ternary )?
assignment => ( IDENTIFIER ( "=" | "+=" | "-=" | "*=" | "/=" | "^=" | "%=" ) assignment | ( "++" | "--" ) ) | logic_or

logic_or => logic_and ( "or" logic_and )*
logic_and => equality ( "and" equality )*

equality => comparison ( ( "!=" | "==" ) comparison )*
comparison => addition ( ( ">" | ">=" | "<" | "<=" ) addition )*

addition => multiplication ( ( "+" | "-" ) multiplication )*
multiplication => power ( ( "*" | "/" | "%" ) power )*
power => unary ( "^" unary )*

unary => ( "++" | "--" | "!" | "+" | "-" ) unary | call
call => primary ( "(" arguments? ")" )*

primary => NUMBER | STRING | "(" expression ")" | IDENTIFIER
